--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "react-redux": "9.0.4",
     "react-scripts": "5.0.1",
     "react-simple-maps": "3.0.0",
-    "react-tooltip": "^5.29.1",
+         "react-tooltip": "5.29.1",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
