--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,12 @@
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
     "axios": "1.6.2",
-    "d3-geo": "3.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "9.0.4",
     "react-scripts": "5.0.1",
-    "react-simple-maps": "3.0.0",
-         "react-tooltip": "5.29.1",
-    "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.20",
+    "@types/topojson-client": "^3.1.5"
   }
 }
