--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,52 +20,41 @@ services:
     networks:
       - travelmap-network
 
-  # Spring Boot 백엔드
-  # backend:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   container_name: travelmap-backend
-  #   restart: unless-stopped
-  #   environment:
-  #     SPRING_PROFILES_ACTIVE: docker
-  #     SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/travelmap
-  #     SPRING_DATASOURCE_USERNAME: travelmap
-  #     SPRING_DATASOURCE_PASSWORD: travelmap123
-  #     YOUTUBE_API_KEY: ${YOUTUBE_API_KEY:-your-youtube-api-key-here}
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - postgres
-  #   networks:
-  #     - travelmap-network
-  #   volumes:
-  #     - backend_logs:/app/logs
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
+      - travelmap-network
 
-  # # React 프론트엔드
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: travelmap-frontend
-  #   restart: unless-stopped
-  #   environment:
-  #     REACT_APP_API_URL: http://localhost:8080/api
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - travelmap-network
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+    networks:
+      - travelmap-network
 
-# 네트워크 설정
 networks:
   travelmap-network:
-    driver: bridge
 
-# 볼륨 설정
 volumes:
   postgres_data:
-    driver: local
-  backend_logs:
-    driver: local 
+
+
+## 네트워크 설정
+#networks:
+#  travelmap-network:
+#    driver: bridge
+#
+## 볼륨 설정
+#volumes:
+#  postgres_data:
+#    driver: local
+#  backend_logs:
+#    driver: local
