--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -7,11 +7,11 @@ plugins {
 group = 'com.travelmap'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
+//java {
+//	toolchain {
+//		languageVersion = JavaLanguageVersion.of(21)
+//	}
+//}
 
 repositories {
 	mavenCentral()
