--- a/k8s/db/postgres-deployment.yaml
+++ b/k8s/db/postgres-deployment.yaml
@@ -21,7 +21,8 @@ spec:
             - name: POSTGRES_USER
               value: travelmap
             - name: POSTGRES_PASSWORD
-              value: dHJhdmVsbWFw
+              value: travelmap
+#              value: dHJhdmVsbWFw
           ports:
             - containerPort: 5432
           volumeMounts:
