pv파일 수 정 코밋

--- a/k8s/db/postgres-pv.yaml
+++ b/k8s/db/postgres-pv.yaml
@@ -4,8 +4,9 @@ metadata:
   name: postgres-pv
 spec:
   capacity:
-    storage: 1Gi
+    storage: 5Gi    # PVC 요청과 맞춤
   accessModes:
     - ReadWriteOnce
+  storageClassName: standard  # PVC와 맞춤
   hostPath:
     path: "/data/postgres"
