k8s 수정중 코밋

--- a/.gitignore
+++ b/.gitignore
@@ -169,7 +169,7 @@ Thumbs.db
 # Configuration files with sensitive data
 application-local.yml
 application-dev.yml
-application-prod.yml 
+#application-prod.yml
 
 Settings.md
 
