--- a/k8s/db/postgres-deployment.yaml
+++ b/k8s/db/postgres-deployment.yaml
@@ -30,7 +30,7 @@ spec:
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
-            claimName: postgres-pvc # PVC 이름만 참조하도록 변경
+            claimName: new-postgres-pvc # PVC 이름만 참조하도록 변경
 ---
 apiVersion: v1
 kind: Service
