--- a/k8s/db/new-postgres-pv.yaml
+++ b/k8s/db/new-postgres-pv.yaml
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   storageClassName: standard  # PVC와 맞춤
   hostPath:
-    path: "/data/postgres"
+    path: "/data/new-postgres"
