--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,10 @@ COPY . .
 RUN npm install && npm run build
 
 FROM nginx:alpine
-# 줄바꿈 형식 오류를 수정하기 위해 dos2unix를 설치하고 실행합
-RUN apk add --no-cache dos2unix
+
+RUN apt-get update && apt-get install -y dos2unix
+COPY --chown=nginx:nginx ../docker-entrypoint.sh /docker-entrypoint.sh
+RUN dos2unix /docker-entrypoint.sh
 
 COPY --from=builder /app/build /usr/share/nginx/html
 
