docker-entrypoint.sh 파일 없는 부분 수정중

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,17 @@ WORKDIR /app
 COPY . .
 RUN npm install && npm run build
 
+FROM --platform=linux/amd64 alpine AS dos2unix-stage
+RUN apk update && apk add dos2unix
+
+# Copy docker-entrypoint.sh to the dos2unix-stage and fix CRLF issues
+WORKDIR /app
+COPY ../docker-entrypoint.sh .
+RUN dos2unix docker-entrypoint.sh
+
 FROM --platform=linux/amd64 nginx:alpine
 
-RUN apk update && apk install -y dos2unix
-COPY --chown=nginx:nginx ../docker-entrypoint.sh /docker-entrypoint.sh
-RUN dos2unix /docker-entrypoint.sh
+COPY --from=dos2unix-stage /app/docker-entrypoint.sh /docker-entrypoint.sh
 
 COPY --from=builder /app/build /usr/share/nginx/html
 
