--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,11 @@ WORKDIR /app
 COPY . .
 RUN npm install && npm run build
 
+# nginx
 FROM nginx:alpine
 COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
