--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,20 @@
-# 모든 쉘 스크립트는 LF 로 강제
+# ==========================
+# 쉘 스크립트: 항상 LF
 *.sh text eol=lf
 
-# Dockerfile은 LF 유지
+# Gradle wrapper: LF
+/gradlew text eol=lf
+
+# Dockerfile: LF 유지
 Dockerfile text eol=lf
 
-# 일반 텍스트 파일은 자동 변환
+# Windows 배치 파일: CRLF
+*.bat text eol=crlf
+
+# 일반 텍스트 파일: 자동 변환
 *.txt text
 
-# 윈도우/맥 환경에서도 바이너리 파일은 변환 안 함
+# 바이너리 파일: 변환 금지
 *.png binary
 *.jpg binary
 *.jpeg binary
