secret file 찾아 env 셋팅

--- a/k8s/db/postgres-deployment.yaml
+++ b/k8s/db/postgres-deployment.yaml
@@ -21,7 +21,10 @@ spec:
             - name: POSTGRES_USER
               value: travelmap
             - name: POSTGRES_PASSWORD
-              value: travelmap
+              valueFrom:
+                secretKeyRef:
+                  name: travelmap-secret # travelmap-secret을 참조하도록 수정
+                  key: db-password
           ports:
             - containerPort: 5432
           volumeMounts:
