--- a/k8s/db/postgres-deployment.yaml
+++ b/k8s/db/postgres-deployment.yaml
@@ -30,6 +30,13 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
