--- a/k8s/gke-service.yaml
+++ b/k8s/gke-service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: travelmap-frontend-service
+  annotations:
+    # GKE LoadBalancer에 외부 IP를 할당하도록 명시적으로 설정합니다.
+    networking.gke.io/load-balancer-type: "External"
 spec:
   type: LoadBalancer # GKE에서는 LoadBalancer 타입 사용을 권장합니다.
   selector:
