--- a/k8s/db/postgres-deployment.yaml
+++ b/k8s/db/postgres-deployment.yaml
@@ -25,6 +25,8 @@ spec:
                 secretKeyRef:
                   name: travelmap-secret # travelmap-secret을 참조하도록 수정
                   key: db-password
+            - name: PGDATA        # 하위 디렉토리 지정
+              value: /var/lib/postgresql/data/pgdata
           ports:
             - containerPort: 5432
           volumeMounts:
