--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,12 @@
-FROM --platform=linux/amd64 node:18-alpine AS builder
+FROM node:18-alpine AS builder
 WORKDIR /app
 COPY . .
 RUN npm install && npm run build
 
 # nginx entrypoint 추출
-FROM --platform=linux/amd64 nginx:alpine AS nginx_stage
+FROM nginx:alpine AS nginx_stage
 
-FROM --platform=linux/amd64 nginx:alpine
+FROM nginx:alpine
 COPY --from=nginx_stage /docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
