--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@
 # EXPOSE 8080
 # CMD ["java", "-jar", "app.jar"]
 
-FROM openjdk:21-slim-buster
+FROM --platform linux/amd64 openjdk:21-slim-buster
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
