--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,12 @@
-FROM --platform=linux/arm64 node:18-alpine AS builder
+FROM --platform=linux/amd64 node:18-alpine AS build
 WORKDIR /app
-COPY . .
-RUN npm config set registry https://registry.npmjs.org/ \
-  && npm install --fetch-retries=5 --fetch-retry-factor=2 \
-  --fetch-retry-mintimeout=10000 --fetch-retry-maxtimeout=60000 \
-  && npm run build
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm install
+COPY . ./
+RUN npm run build
 
-FROM --platform=linux/arm64 nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+FROM --platform=linux/amd64 nginx:1.21-alpine
+COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
