--- a/k8s/db/gke-postgres-pv.yaml
+++ b/k8s/db/gke-postgres-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: gke-postgres-pvc
 spec:
   capacity:
     storage: 5Gi    # PVC 요청과 맞춤
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   storageClassName: standard  # PVC와 맞춤
   hostPath:
-    path: "/data/new-postgres"
+    path: "/data/gke-postgres"
