--- a/k8s/db/gke-postgres-pvc.yaml
+++ b/k8s/db/gke-postgres-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: gke-postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
