pvc파일 metadata: name 수정 코밋

--- a/k8s/db/k8s-postgres-pvc.yaml
+++ b/k8s/db/k8s-postgres-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: k8s-postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
