--- a/k8s/db/k8s-postgres-pv.yaml
+++ b/k8s/db/k8s-postgres-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: k8s-postgres-pv
 spec:
   capacity:
     storage: 5Gi    # PVC 요청과 맞춤
