k8s pv, pvc 파일 수정 코밋, nodeAffinity로 노드 연결

--- a/k8s/db/k8s-postgres-pv.yaml
+++ b/k8s/db/k8s-postgres-pv.yaml
@@ -4,9 +4,17 @@ metadata:
   name: k8s-postgres-pv
 spec:
   capacity:
-    storage: 5Gi    # PVC 요청과 맞춤
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard  # PVC와 맞춤
+  storageClassName: standard
   hostPath:
     path: "/data/k8s-postgres"
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - k8s-travel
