--- a/k8s/db/gke-postgres-pvc.yaml
+++ b/k8s/db/gke-postgres-pvc.yaml
@@ -9,4 +9,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: standard
+  storageClassName: standard-rwo   # Autopilot 기본 StorageClass
