--- a/k8s/db/k8s-postgres-pvc.yaml
+++ b/k8s/db/k8s-postgres-pvc.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: k8s-postgres-pvc
+  name: postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
-  storageClassName: standard
+  storageClassName: local-path
