--- a/k8s/travelmap/templates/serviceaccount.yaml
+++ b/k8s/travelmap/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "monorepo.serviceAccountName" . }}
+  name: {{ include "travelmap.serviceAccountName" . }}
   labels:
-    {{- include "monorepo.labels" . | nindent 4 }}
+    {{- include "travelmap.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
