--- a/k8s/travelmap/templates/hpa.yaml
+++ b/k8s/travelmap/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "monorepo.fullname" . }}
+  name: {{ include "travelmap.fullname" . }}
   labels:
-    {{- include "monorepo.labels" . | nindent 4 }}
+    {{- include "travelmap.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "monorepo.fullname" . }}
+    name: {{ include "travelmap.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
