--- a/k8s/travelmap/templates/service.yaml
+++ b/k8s/travelmap/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "monorepo.fullname" . }}
+  name: {{ include "travelmap.fullname" . }}
   labels:
-    {{- include "monorepo.labels" . | nindent 4 }}
+    {{- include "travelmap.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "monorepo.selectorLabels" . | nindent 4 }}
+    {{- include "travelmap.selectorLabels" . | nindent 4 }}
