--- a/k8s/travelmap/values.yaml
+++ b/k8s/travelmap/values.yaml
@@ -1,4 +1,4 @@
-# Default values for monorepo.
+# Default values for travelmap.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
