helm 파일 수정중

--- a/helm/travelmap/templates/service.yaml
+++ b/helm/travelmap/templates/service.yaml
@@ -1,15 +1,49 @@
+# templates/service.yaml
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "travelmap.fullname" . }}
+  name: {{ include "travelmap.fullname" . }}-backend
   labels:
     {{- include "travelmap.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.backend.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: {{ .Values.backend.service.port }}
+      targetPort: {{ .Values.backend.service.port }}
       protocol: TCP
       name: http
   selector:
-    {{- include "travelmap.selectorLabels" . | nindent 4 }}
+    app: {{ include "travelmap.name" . }}-backend
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "travelmap.fullname" . }}-frontend
+  labels:
+    {{- include "travelmap.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.frontend.service.type }}
+  ports:
+    - port: {{ .Values.frontend.service.port }}
+      targetPort: {{ .Values.frontend.service.port }}
+      protocol: TCP
+      name: http
+  selector:
+    app: {{ include "travelmap.name" . }}-frontend
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ $fullName }}-postgres
+  labels:
+    {{- include "travelmap.labels" . | nindent 4 }}
+spec:
+  type: ClusterIP
+  ports:
+    - port: {{ .Values.db.port }}
+      targetPort: {{ .Values.db.port }}
+      protocol: TCP
+      name: db
+  selector:
+    app: postgres
