--- a/helm/travelmap/templates/service.yaml
+++ b/helm/travelmap/templates/service.yaml
@@ -27,7 +27,7 @@ spec:
   type: {{ .Values.frontend.service.type }}
   ports:
     - port: {{ .Values.frontend.service.port }}
-      targetPort: {{ .Values.frontend.service.port }}
+      targetPort: 80
       protocol: TCP
       name: http
   selector:
