--- a/helm/travelmap/values.yaml
+++ b/helm/travelmap/values.yaml
@@ -3,24 +3,36 @@ replicaCount: 2
 backend:
   image:
     repository: somlh1212/travelmap-backend
-    tag: latest
-    pullPolicy: Always
+    tag: v1.0.0
+    pullPolicy: IfNotPresent
   service:
     type: ClusterIP # 내부용
     port: 8080
   env:
     SPRING_PROFILES_ACTIVE: prod
-  resources: {}
+  resources:
+    requests:
+      cpu: "250m"
+      memory: "512Mi"
+    limits:
+      cpu: "500m"
+      memory: "1Gi"
 
 frontend:
   image:
     repository: somlh1212/travelmap-frontend
-    tag: latest
+    tag: v1.0.0
     pullPolicy: IfNotPresent
   service:
     type: LoadBalancer  # 외부용
     port: 80
-  resources: {}
+  resources:
+    requests:
+      cpu: "200m"
+      memory: "256Mi"
+    limits:
+      cpu: "400m"
+      memory: "512Mi"
 
 db:
   type: k8s # k8s / gke
@@ -76,17 +88,17 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-   limits:
-     cpu: 100m
-     memory: 100Mi
-   requests:
-     cpu: 200m
-   memory: 200Mi
+#resources:
+#  # We usually recommend not to specify default resources and to leave this as a conscious
+#  # choice for the user. This also increases chances charts run on environments with little
+#  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+#  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+#   limits:
+#     cpu: 100m
+#     memory: 100Mi
+#   requests:
+#     cpu: 200m
+#   memory: 200Mi
 
 autoscaling:
   enabled: false
