--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
-FROM --platform=linux/amd64 node:18-alpine AS build
+# FROM --platform=linux/amd64 node:18-alpine AS build
+FROM node:18-alpine AS build
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
@@ -6,7 +7,8 @@ RUN npm install
 COPY . ./
 RUN npm run build
 
-FROM --platform=linux/amd64 nginx:1.21-alpine
+# FROM --platform=linux/amd64 nginx:1.21-alpine
+FROM nginx:1.21-alpine
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
