--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # FROM --platform=linux/amd64 openjdk:21-slim-buster
-FROM --platform=linux/arm64 openjdk:21-slim-buster
+FROM openjdk:21-slim-buster
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
