youtube key add

--- a/helm/travelmap/values.yaml
+++ b/helm/travelmap/values.yaml
@@ -10,6 +10,8 @@ backend:
     port: 8080
   env:
     SPRING_PROFILES_ACTIVE: prod
+    youtubeApiSecret: travelmap-secret
+    youtubeApiKey: youtube-api-key
   resources:
     requests:
       cpu: "250m"
