--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -32,6 +32,11 @@ spec:
                   secretKeyRef:
                     name: {{ .Values.db.password.secretName }}
                     key: {{ .Values.db.password.secretKey }}
+              - name: YOUTUBE_API_KEY
+                valueFrom:
+                  secretKeyRef:
+                    name: { { .Values.backend.env.youtubeApiSecret } }
+                    key: { { .Values.backend.env.youtubeApiKey } }
             livenessProbe:
               httpGet:
                 path: /
